Fix Calendar layout issue

--- a/src/styles/CalendarApp.css
+++ b/src/styles/CalendarApp.css
@@ -11,4 +11,5 @@
 
 .calendar-table {
   width: 100%;
+  height: 1050px;
 }
